[package]
name = "beetree"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.32", features = ["cargo"] }
dotenvy = "0.15.7"
reqwest = { version = "0.12.15", features = ["blocking"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
openssl = { version = "0.10", features = ["vendored"] }
